--- a/src/main/resources/static/Catalogo.html
+++ b/src/main/resources/static/Catalogo.html
@@ -40,13 +40,30 @@
         </a>
       </div>
       <div class="ms-auto">
-        <a class="navbar-item" href="./Login.html">
-          <img src="./Assets/Img/iconUser.png" alt="" width="30" height="30">
+        <a href="./Login.html">
+          <img src="./Assets/Img/iconUser.png" id="icon-login" width="30" height="30">
         </a>
-        <a class="cart" href="./Cart.html">
-          <img src="./Assets/Img/cart.png" alt="" width="30" height="30"><span
-            class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
-        </a>
+      </div>
+      <div class="mr-auto">
+        <div class="container-icon" id="icon-cart">
+          <div class="container-cart-icon">
+            <img class="container-icon mr-5" src="./Assets/Img/shoppingbag.png" width="30" height="30">
+            <div class="count-products">
+              <span id="contador-productos">0</span>
+            </div>
+          </div>
+          <div class="container-cart-products hidden-cart">
+            <div class="row-product hidden">
+              <!----------------  Cart Products  ------------------->
+            </div>
+            <div class="cart-total hidden">
+              <h3>Total:</h3>
+              <span class="total-pagar">$ 00.00 MXN</span>
+              <button type="button" class="btn btn-dark btn-sm" onclick="window.location.href='./Carrito.html'" >Carrito</button>
+            </div>
+            <p class="cart-empty">El carrito está vacío</p>
+          </div>
+        </div>
       </div>
     </div>
   </nav>
@@ -88,89 +105,60 @@
   <!--aqui empieza el boton desplegable-->
   <div class="allcontent">
     <div class="container-fluid text-center">
-      <div class="row ">
-        <div class="col-sm-2">
+      <div class="row">
+
+        <div class="col-2">
           <h3 id="filterfor">Filtrar por</h3>
-
+  
           <!--aqui empieza la tabla de filtro-->
-
-          <div class="container mt-3" id="desplegable">
-            <div class="dropdown" id="desplegable">
-              <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">Marca
-              </button>
-
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" onclick="updateFiltro('brand/kali Brews')">Kali Brews</a></li>
-                <li><a class="dropdown-item" onclick="updateFiltro('brand/Copado')">Copado</a></li>
-                <li><a class="dropdown-item" onclick="updateFiltro('brand/Fractal')">Fractal</a></li>
-              </ul>
-            </div>
+  
+  
+          <div class="dropdown" id="desplegable">
+            <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">Marca
+            </button>
+  
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" onclick="updateFiltro('brand/kali Brews')">Kali Brews</a></li>
+              <li><a class="dropdown-item" onclick="updateFiltro('brand/Copado')">Copado</a></li>
+              <li><a class="dropdown-item" onclick="updateFiltro('brand/Fractal')">Fractal</a></li>
+            </ul>
           </div>
-
+  
+  
           <div class="dropdown">
             <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">Precio
             </button>
-
+  
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" onclick="updateFiltro('ASC')">Menor a mayor</a></li>
               <li><a class="dropdown-item" onclick="updateFiltro('DESC')">Mayor a menor </a></li>
             </ul>
           </div>
-
+  
           <div class="dropdown">
             <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
               Estilo
             </button>
-
+  
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" onclick="updateFiltro('style/Stout')">Stout</a></li>
               <li><a class="dropdown-item" onclick="updateFiltro('style/Pale Ale')">Pale Ale</a></li>
               <li><a class="dropdown-item" onclick="updateFiltro('style/Wheat')">Wheat</a></li>
               <li><a class="dropdown-item" onclick="updateFiltro('style/IPA')">IPA</a></li>
-
-
             </ul>
           </div>
-
-
         </div>
-
+  
         <!------------------------ Catálogo---------------------->
-
-        <div class="col-sm-10">
-          <section class="NovidadesSection">
-            <main class="mainDestacados">
-              <h3>Catálogo</h3>
-              <section class="containerProdutos" id="containerProductos">
-                <!--container -->
-                <div class="album py-5">
-                  <div class="container">
-                    <div class="row" id="div_Productos">
-                    </div>
-                  </div>
-                </div> 
-                <!--container -->
-                <!-- <div class="album py-5">
-                  <div class="container">
-                    <div class="row" id="div_Productos">
-                      
-                    </div>
-                  </div>
-                </div>  -->
-                <!--container -->
-                <!-- <div class="album py-5">
-                  <div class="container">
-                    <div class="row" id="div_Productos">
-                    </div> 
-                  </div>
-                </div>  -->
-
-              </section>
-            </main>
-          </section>
+  
+        <div class="col-10 container-items">
+          <h3>Catálogo</h3>
+          <!--container -->
+          <div class="row py-3 pb-3" id="div_Productos">
+            <!------------------  Beer Cards  ------------------->
+          </div>
         </div>
-
-
+        
       </div>
     </div>
   </div>
@@ -247,7 +235,7 @@
 
 
   <!--conexion js cart-->
-  <script src="./Assets/Js/Cart.js"> </script>
+  <script src="./Assets/Js/Carrito.js"> </script>
   <!--conexion js products-->
   <script src="./Assets/Js/Catalogo.js"></script>
   <!--conexion sweetalert2-->
