--- a/src/main/resources/static/Productores.html
+++ b/src/main/resources/static/Productores.html
@@ -22,32 +22,48 @@
 </head>
 
 <body>
-  <!------------------------------------------------------
+<!------------------------------------------------------
                        Encabezado
 -------------------------------------------------------->
-  <header>
-    <nav class="navbar p-3" id="colo">
-      <div class="container">
-        <a class="navbar-item" href="./Index.html">
-          <img src="./Assets/Img/logo.png" alt="" width="70" height="60">
-        </a>
-        <div class="position-absolute top-50 start-50 translate-middle">
-          <a class="navbar-item">
-            <img src="./Assets/Img/ribbon.png" alt="" width="200" height="80">
-          </a>
+<nav class="navbar p-3" id="colo">
+  <div class="container">
+    <a class="navbar-item" href="./Index.html">
+      <img src="./Assets/Img/logo.png" alt="" width="70" height="60">
+    </a>
+    <div class="position-absolute top-50 start-50 translate-middle">
+      <a class="navbar-item">
+        <img src="./Assets/Img/ribbon.png" alt="" width="200" height="80">
+      </a>
+    </div>
+    <div class="ms-auto">
+      <a href="./Login.html">
+        <img src="./Assets/Img/iconUser.png" id="icon-login" width="30" height="30">
+      </a>
+    </div>
+    <div class="mr-auto">
+      <div class="container-icon" id="icon-cart">
+        <div class="container-cart-icon">
+          <img class="container-icon mr-5" src="./Assets/Img/shoppingbag.png" width="30" height="30">
+          <div class="count-products">
+            <span id="contador-productos">0</span>
+          </div>
         </div>
-        <div class="ms-auto">
-          <a class="navbar-item" href="./Login.html">
-            <img src="./Assets/Img/iconUser.png" alt="" width="30" height="30">
-          </a>
-          <a class="cart" href="./Cart.html">
-            <img src="./Assets/Img/cart.png" alt="" width="30" height="30"><span
-            class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
-          </a>
+        <div class="container-cart-products hidden-cart">
+          <div class="row-product hidden">
+            <!----------------  Cart Products  ------------------->
+          </div>
+          <div class="cart-total hidden">
+            <h3>Total:</h3>
+            <span class="total-pagar">$ 00.00 MXN</span>
+            <button type="button" class="btn btn-dark btn-sm" onclick="window.location.href='./Carrito.html'">Carrito</button>
+          </div>
+          <p class="cart-empty">El carrito está vacío</p>
         </div>
       </div>
-    </nav>
-    <!------------------------------------------------------
+    </div>
+  </div>
+</nav>   
+<!------------------------------------------------------
                 NavBar position-absolute top-50 start-50 translate-middle 
 -------------------------------------------------------->
     <nav class="navbar navbar-expand-lg">
@@ -75,7 +91,7 @@
         </div>
       </div>
     </nav>
-  </header>
+  
   <br>
   <br>
 <!-- PRODUCTORES -->
@@ -182,8 +198,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
 crossorigin="anonymous"></script>
-<!--conexion js-->
-<script src="./Assets/Js/Cart.js"> </script>
+<!--conexion js cart-->
+<script src="./Assets/Js/Carrito.js"> </script>
  <!--llamado sweetaler2 de js-->
  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
  <script src="./Assets/Js/Main.js"></script>
