--- a/src/main/resources/static/nosotros.html
+++ b/src/main/resources/static/nosotros.html
@@ -33,30 +33,44 @@
 <!-------------------------------------------
                        Encabezado
 -------------------------------------------------------->
-
 <nav class="navbar p-3" id="colo">
-    <div class="container">
-      <a class="navbar-item" href="./Index.html">
+  <div class="container">
+    <a class="navbar-item" href="./Index.html">
       <img src="./Assets/Img/logo.png" alt="" width="70" height="60">
+    </a>
+    <div class="position-absolute top-50 start-50 translate-middle">
+      <a class="navbar-item">
+        <img src="./Assets/Img/ribbon.png" alt="" width="200" height="80">
       </a>
-      <div class="position-absolute top-50 start-50 translate-middle">
-        <a class="navbar-item" href="#">
-          <img src="./Assets/Img/ribbon.png" alt="" width="200" height="80">
-        </a>
-      </div>
-      <div class="ms-auto">
-        <a class="navbar-item" href="./Login.html">
-          <img src="Assets/Img/iconUser.png" alt="" width="30" height="30">
-        </a>
-        <a class="cart" href="./Cart.html">
-          <img src="./Assets/Img/cart.png" alt="" width="30" height="30"><span
-          class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
-        </a>
+    </div>
+    <div class="ms-auto">
+      <a href="./Login.html">
+        <img src="./Assets/Img/iconUser.png" id="icon-login" width="30" height="30">
+      </a>
+    </div>
+    <div class="mr-auto">
+      <div class="container-icon" id="icon-cart">
+        <div class="container-cart-icon">
+          <img class="container-icon mr-5" src="./Assets/Img/shoppingbag.png" width="30" height="30">
+          <div class="count-products">
+            <span id="contador-productos">0</span>
+          </div>
+        </div>
+        <div class="container-cart-products hidden-cart">
+          <div class="row-product hidden">
+            <!----------------  Cart Products  ------------------->
+          </div>
+          <div class="cart-total hidden">
+            <h3>Total:</h3>
+            <span class="total-pagar">$ 00.00 MXN</span>
+            <button type="button" class="btn btn-dark btn-sm" onclick="window.location.href='./Carrito.html'">Carrito</button>
+          </div>
+          <p class="cart-empty">El carrito está vacío</p>
+        </div>
       </div>
     </div>
-  </nav>
-
-
+  </div>
+</nav>
 <!------------------------------------------------------
                   NavBar
 -------------------------------------------------------->
@@ -296,7 +310,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <!--conexion js-->
-    <script src="./Assets/Js/Cart.js"> </script>
+    <script src="./Assets/Js/Carrito.js"> </script>
 
     <!-- Vinculo a JS -->
 	<script src="./Assets/Js/Nosotros.js"></script>
